common-applications/test-environment/openeuler-website-master/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openeuler-website-master
  name: openeuler-website-master
