common-applications/test-environment/openeuler-website-master/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openeuler-website
  namespace: openeuler-website-master
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: openeuler-website
  template:
    metadata:
      labels:
        app: openeuler-website
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: websiteinfod
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler-website-master-test:v1.0.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
